[gd_scene load_steps=9 format=3 uid="uid://8xdhcn3yaegd"]

[ext_resource type="Script" path="res://Scripts/level_select_menu.gd" id="1_8sitd"]
[ext_resource type="Texture2D" uid="uid://ce5pnplhlskdt" path="res://Assets/Level select screen.png" id="2_w7y7j"]
[ext_resource type="Texture2D" uid="uid://ctpw5e10txju0" path="res://Assets/Level 1.png" id="3_2ukpa"]
[ext_resource type="Texture2D" uid="uid://ymyod8prhn8p" path="res://Assets/Back button.png" id="3_ykujf"]
[ext_resource type="Texture2D" uid="uid://b5cwo28c0khdv" path="res://Assets/Level 2.png" id="4_crfar"]
[ext_resource type="Texture2D" uid="uid://cf1spj6as05do" path="res://Assets/Level 3.png" id="5_n4xxf"]
[ext_resource type="Texture2D" uid="uid://2ywvfyv6on3u" path="res://Assets/Level 4.png" id="6_7crbj"]
[ext_resource type="Texture2D" uid="uid://dvhfvgm4lu117" path="res://Assets/Level 5.png" id="7_hmup2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sitd")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_w7y7j")

[node name="Level_1" type="Button" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 158.0
offset_right = 628.0
offset_bottom = 722.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("3_2ukpa")
flat = true

[node name="Level_2" type="Button" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 141.0
offset_right = 813.0
offset_bottom = 701.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("4_crfar")
flat = true

[node name="Level_3" type="Button" parent="."]
layout_mode = 0
offset_left = 434.0
offset_top = 174.0
offset_right = 994.0
offset_bottom = 734.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("5_n4xxf")
flat = true

[node name="Level_4" type="Button" parent="."]
layout_mode = 0
offset_left = 615.0
offset_top = 147.0
offset_right = 1175.0
offset_bottom = 707.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("6_7crbj")
flat = true

[node name="Level_5" type="Button" parent="."]
layout_mode = 0
offset_left = 788.0
offset_top = 177.0
offset_right = 1348.0
offset_bottom = 737.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("7_hmup2")
flat = true

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 486.61
offset_top = 560.0
offset_right = 1670.61
offset_bottom = 976.0
scale = Vector2(0.151, 0.151)
icon = ExtResource("3_ykujf")
flat = true

[node name="Fade" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="Fade_timer" type="Timer" parent="."]

[connection signal="button_up" from="Level_1" to="." method="_level_1_pressed"]
[connection signal="mouse_entered" from="Level_1" to="." method="_level_1_mouse_entered"]
[connection signal="mouse_exited" from="Level_1" to="." method="_level_1_mouse_exited"]
[connection signal="button_up" from="Level_2" to="." method="_level_2_pressed"]
[connection signal="mouse_entered" from="Level_2" to="." method="_level_2_mouse_entered"]
[connection signal="mouse_exited" from="Level_2" to="." method="_level_2_mouse_exited"]
[connection signal="button_up" from="Level_3" to="." method="_level_3_pressed"]
[connection signal="mouse_entered" from="Level_3" to="." method="_level_3_mouse_entered"]
[connection signal="mouse_exited" from="Level_3" to="." method="_level_3_mouse_exited"]
[connection signal="button_up" from="Level_4" to="." method="_level_4_pressed"]
[connection signal="mouse_entered" from="Level_4" to="." method="_level_4_mouse_entered"]
[connection signal="mouse_exited" from="Level_4" to="." method="_level_4_mouse_exited"]
[connection signal="button_up" from="Level_5" to="." method="_level_5_pressed"]
[connection signal="mouse_entered" from="Level_5" to="." method="_level_5_mouse_entered"]
[connection signal="mouse_exited" from="Level_5" to="." method="_level_5_mouse_exited"]
[connection signal="button_up" from="Back" to="." method="_back_button_pressed"]
[connection signal="mouse_entered" from="Back" to="." method="_back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_back_mouse_exited"]
[connection signal="timeout" from="Fade_timer" to="." method="_fade_timer_done"]
